@@ -1,0 +1,3 @@
+en,es,ru
+green,verde,зеленый
+red,rojo,красный
