@@ -9,6 +9,7 @@
 * Enhancements
 
   * :parser option takes an object that responds to #parse(row) and returns an array of one or more rows.
+  * RemoteTable.transpose(url, key_key, value_key) helper
 
 2.1.1 / 2013-03-25
 
